[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Fire.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Fire" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.878431, 0.121569, 0.121569, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Fire_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Fire_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
